# AER1514_project

./: README.md
Documents/: .bashrc  Astra_camera_rgb.md  Astra_camera_rgb.rm  Guides  Rviz Setup.odt  Turtlebot Startup Guide.odt  turtlebot_bashrc.txt
Documents/dock_test_images/: readme.md
Launch/: readme.txt  turtlebot_gazebo_mymap.launch  turtlebot_stage_custom.launch  turtlebot_stage_utias2.launch
Maps/: corridor_world_map2.pgm  corridor_world_map2.yaml  readme.txt  utias.pgm  utias.yaml  utias2.pgm  utias2.world  utias2.yaml  utias4.pgm  utias5.pgm  utias_obs.xcf
src/: template.cpp
walle/: CMakeLists.txt  CMakeLists.txt~  package.xml
walle/msg/: dockingAction.msg  dockingState.msg  homeState.msg  qrCode.msg
walle/src/: readme.md
walle/src/launch/: amcl_custom.launch
walle/src/launch/turtlebot/: amcl_zbar_custom.launch~  amcl_zbar_dualCam_walle.launch  amcl_zbar_remote.launch~  amcl_zbar_walle.launch~  amcl_zbarlt_dd_dualCam_walle.launch  amcl_zbarlt_dd_dualCam_walle.launch~  amcl_zbarlt_dualCam_walle.launch  amcl_zbarlt_dualCam_walle.launch~  amcl_zbarlt_walle.launch  amcl_zbarlt_walle.launch~  astracam_zbarlt.launch  bringup_custom.launch~  bringup_walle.launch  qrDetect_astra.launch~  qrDetect_dualCam_zbar.launch  qrDetect_dualCam_zbar.launch~  qrDetect_laptopCam.launch  qrDetect_laptopCam.launch~  qrDetect_remotecompressed.launch~
walle/src/launch/turtlebot/Drafts/: amcl_custom.launch  amcl_zbar_dualCam_walle.launch  amcl_zbar_remote.launch  amcl_zbar_walle.launch  astra_cam.launch  calib-live-firewire-custom.launch  qrDetect_astra.launch  qrDetect_zbar.launch  zbarlite.launch
walle/src/launch/workstation/: custom_compact.launch  custom_compact.launch~  map_navigation_custom.launch  map_navigation_stage.laun  map_navigation_stage_mymap.launch  map_navigation_stage_psu.launch  qrDetect_laptopCam_zbar.launch  qrDetect_laptopCam_zbar.launch~  qrDetect_remote.launch  qrDetect_remote.launch~  qrDetect_remotecompressed.launch  restart.launch  testDebug.launch  testDebug.launch~  turtlebot_gazebo_corridor.launch  turtlebot_navtest1_remote.launch  turtlebot_stage_home.launch  turtlebot_stage_maze.launch  turtlebot_stage_mymap.launch  turtlebot_stage_roboparck.launch  turtlebot_stage_willow-full-0.10.launch
walle/src/maps/: corridor_world_map2.world  corridor_world_map2.yaml  corridor_world_map2.yaml~  utias10.pgm  utias11.pgm  utias11.yaml  utias3.pgm  utias4.yaml  utias6.pgm  utias7.pgm  utias8.pgm  utias8.yaml  utias8.yaml~  utias9.pgm  utias9.yaml  willow-full-0.10.yaml
walle/src/maps/UTIAS/: utias3.yaml
walle/src/maps/gimp/: utias_obs_grey.xcf  utias_obs_homebase.xcf
walle/src/maps/stage/: willow-full-0.10.world
walle/src/models/: calibrationAstra.ini  calibrationLaptop.ini  calibrationTiral  qrDemoDay.cao  qrDemoDay.cfg  qrDemoDay.wrl
walle/src/msgs/: exploreState.msg
walle/src/param/: dwa_local_planner_params.yaml  global_planner_params.yaml
walle/src/scripts/: allowableTime.txt  allowableTime.txt~  autoDock_nav_test.cpp  autoDock_test.cpp  autoDocking.cpp  autoDocking.cpp~  autoDockingStandalone.cpp  blob_test_loop.cpp  cancelGoal_test.cpp  dockDetect.cpp  fileOperationsTest.cpp  nav_test2.cpp  nav_test_withTimer.cpp  navigation.cpp  navigation.cpp~  qrCode.h  qrLinkedList.cpp  qrLinkedList.h  qrMasterList.txt  qrMasterList.txt~  qr_nav_test.cpp  qr_nav_test0.cpp  qr_nav_test1.cpp  qr_nav_test_vs.cpp  qr_nav_test_vs_noWaypointTest.cpp  qr_nav_vs.cpp  qr_pose.cpp  qr_pose.cpp~  qr_pose_and_no_orient.cpp  supervisor.cpp  supervisor.cpp.BACKUP.9243.cpp  supervisor.cpp.BASE.9243.cpp  supervisor.cpp~  time_test.cpp  time_test_subscriber.cpp
walle/src/scripts/Drafts/: autoDock_vs_test.cpp  blob_test_loop.cpp  nav_test1.cpp  nav_test2.cpp  qrLinkedList.cpp  qrNode.h  qr_nav_test.cpp  qr_nav_test_rotatedLaptop.cpp  qr_nav_test_vs.cpp  qr_nav_test_zbar.cpp  qr_pose.cpp  qr_zigzag_nav_test.cpp  supervisor_linkedList_test.cpp  supervisor_linkedList_test.cpp~  supervisor_withLinkedList.cpp  time_test.cpp  time_test_subscriber.cpp  videoBlobDetect.cpp  videoFilter.cpp
walle/src/scripts/waypoint_textfiles/: .~lock.master_waypoints_final_nms.csv#  .~lock.master_waypoints_final_no_machine_shop.csv#  masterWaypoints.txt.csv  masterWaypoints10.txt.csv  masterWaypoints10.txt.csv~  masterWaypoints11.csv  masterWaypoints11.txt.csv~  masterWaypoints2.txt.csv  masterWaypoints3.txt.csv  masterWaypoints4.txt.csv  masterWaypoints5.txt.csv  masterWaypoints5.txt.csv~  masterWaypoints6.txt.csv  masterWaypoints6.txt.csv~  masterWaypoints7.txt.csv  masterWaypoints7.txt.csv~  masterWaypoints8.txt.csv  masterWaypoints8.txt.csv~  masterWaypoints9.txt.csv  masterWaypoints9.txt.csv~  master_waypoints_final.csv  master_waypoints_final.csv~  master_waypoints_final_nms.csv  master_waypoints_final_nms.csv~
walle/src/turtlebot/navigation/map_navigation/: nav_test1.cpp  nav_test3.cpp  nav_test4.cpp  qr_nav_test1.cpp
walle/src/turtlebot/navigation/map_navigation/launch/: map_navigation_gazebo_mymap.launch  turtlebot_gazebo_mymap.launch~  turtlebot_stage_mymap.launch~
zbarlight/: CMakeLists.txt  package.xml
zbarlight/launch/: example.launch~
